# msu_llm_hw

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiment.py
.github/workflows/: run_experiment.yml
configs/: config.example.yaml  config.yaml
data/: README.md
data/results/: evaluation_results.json
data/telegram/: posts.json
notebooks/: README.md  experiments.ipynb
src/: __init__.py  baseline.py  classifier.py  evaluate.py  ingest_telegram.py  llm_features.py  load_moex.py  models.py
