[project]
name = "msu-llm-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "telethon>=0.30.0",
]
